[package]
name = "slim-calculator"
version = "0.1.0"
description = "Minecraft Slime Chunk Scanner GUI"
authors = ["you"]
edition = "2021"

[lib]
name = "slim_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = "0.4"

